Add needed translations

--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -75,13 +75,14 @@ es-CL:
   date: Fecha
   date_and_time: Fecha y hora
   delete_account: Eliminar cuenta
-  delete_account_agree: Comprendo las consecuencias y quiero eliminar mi cuenta
+  delete_account_agree: Entiendo las consecuencias y quiero eliminar mi cuenta
   delete_account_confirmation_email_explain_html: <p>Te enviamos un correo electrónico a <a href="%{user_email}">%{user_email}</a> para continuar con el proceso de eliminación. </p><p>Si no lo recibiste, por favor escribinos a <a href="%{support_email}">%{support_email}</a>.</p>
   delete_account_confirmation_request: Para confirmar esta acción, escribí
   delete_account_confirmation_text: quiero eliminar mi cuenta
   delete_account_explain: Al eliminar tu cuenta, perderás acceso a todos los contenidos, así como a tu progreso.
-  delete_account_invalid_token: Desculpe, o link que trouxe você aqui expirou ou é inválido.
-  delete_account_modal_explain_html: <p>Estás a punto de eliminar la cuenta de <strong>%{name}</strong></p><p>Al hacerlo, perderás acceso a los siguientes recorridos:</p>
+  delete_account_invalid_token: Lo sentimos, el enlace que te trajo hasta aquí ha expirado o es inválido.
+  delete_account_modal_explain_html: Estás a punto de eliminar la cuenta de <strong>%{name}</strong>
+  delete_account_modal_lost_permissions: 'Al hacerlo, perderás el acceso a los siguientes recorridos:'
   delete_account_mumuki: Eliminar tu cuenta de Mumuki
   delete_account_try_again_html: Si todavía quieres eliminar tu cuenta, volvé a iniciar el proceso desde <a href="%{profile_url}">tu perfil</a>.
   deleted_by: Eliminado por %{deleter}
@@ -213,23 +214,27 @@ es-CL:
   locked_content: 'Éste contenido se desbloqueará cuando termines los capítulos anteriores'
   mailer:
     title:
+      custom: ¡Tenés una nueva notificación!
+      delete_account: Confirmar eliminación de cuenta
       exam_authorization_request_updated: Tenés cambios en tu inscripción al examen
       exam_authorization_request_rejected: Inscripción rechazada
       exam_registration: Apertura de inscripciones
-      custom: ¡Tenés una nueva notificación!
     subtitle:
+      delete_account: Lamentamos que nos dejes
       exam_authorization_request_approved: Tu solicitud de inscripción al examen fue aprobada.
       exam_authorization_request_rejected: Tu solicitud de inscripción al examen fue rechazada ya que no se cumplieron los requisitos.
       exam_registration: ¡Ya podés inscribirte al examen!
     text:
+      delete_account: ¡Pero no te preocupes! si decidís volver a intentarlo, siempre podés crear una cuenta nueva.
       exam_authorization_request_approved: Podrás rendir el examen el día %{exam_start_date} ingresando a la plataforma. ¡Éxitos!
       exam_authorization_request_rejected: ¡No te desanimes! Hiciste un gran esfuerzo y esperamos que continúes aprendiendo programación.
       exam_registration: Tenés tiempo de inscribirte hasta el %{exam_registration_deadline}. Para que tu inscripción sea aceptada debés cumplir con los requisitos.
     button:
+      custom: Mis notificaciones
+      delete_account: Eliminar Cuenta
       exam_registration: Inscribirme al Examen
       exam_authorization_request_approved: Ir a la plataforma
       exam_authorization_request_rejected: Mis exámenes
-      custom: Mis notificaciones
   male: Hombre
   manage_notification_subscriptions: Administrá tus notificaciones
   manage_notifications: Administrar notificaciones
