--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -79,9 +79,10 @@ en:
   delete_account_confirmation_email_explain_html: <p>We sent you an email to <a href="%{user_email}">%{user_email}</a> to continue with the removal process.
   delete_account_confirmation_request: To confirm this action, please write
   delete_account_confirmation_text: delete my account
-  delete_account_explain: After deleting your account, you will lose access to all the contents and to your progress.
+  delete_account_explain: After deleting your account, you will lose access to all contents as well as your progress.
   delete_account_invalid_token: We are sorry, the link has expired or is invalid.
-  delete_account_modal_explain_html: <p>You're about to delete <strong>%{name}</strong> account</p><p>By doing that, you will lose access to the following paths:</p>
+  delete_account_modal_explain_html: You're about to delete the account for <strong>%{name}</strong>
+  delete_account_modal_lost_permissions: 'By doing that, you will lose access to the following paths:'
   delete_account_mumuki: Delete your Mumuki account
   delete_account_try_again_html: If you still want to delete your account, begin the process again from <a href="%{profile_url}">your profile</a>.
   deleted_by: Deleted by %{deleter}
@@ -209,23 +210,27 @@ en:
   locked_content: 'This content will be unlocked when you finish previous chapters'
   mailer:
     title:
+      custom: You have a new notification!
+      delete_account: Confirm account deletion
       exam_authorization_request_updated: There are updates in your exam registration
       exam_authorization_request_rejected: Exam registration rejected
       exam_registration: Exam registrations open
-      custom: You have a new notification!
     subtitle:
+      delete_account: We're sorry to see you go
       exam_authorization_request_approved: Your registration request to the exam has been approved.
       exam_authorization_request_rejected: Your registration request to the exam has been rejected because the requirements weren't met.
       exam_registration: ¡You can register for the exam!
     text:
+      delete_account: But don't worry! if you decide to try again, you can always create a new account.
       exam_authorization_request_approved: You can sit for the exam on %{exam_start_date} by going into the platform. ¡Good luck!
       exam_authorization_request_rejected: ¡Don't be upset! You did a great job and we hope you'll keep learning programming.
       exam_registration: You have until %{exam_registration_deadline} to sign up. In order to be approved, you must meet the requirements.
     button:
+      custom: My notifications
+      delete_account: Delete Account
       exam_registration: Sign up for the exam
       exam_authorization_request_approved: Go to the platform
       exam_authorization_request_rejected: My exams
-      custom: My notifications
   male: Male
   manage_notification_subscriptions: Manage your notification subscriptions
   manage_notifications: Manage notifications
