--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -121,9 +121,9 @@ en:
   errored: Oops, your solution didn't work
   exam_authorization_pending_explanation_html: You have until <strong>%{end_time}</strong> (%{location} time) to register. After that date, your request will be processed and you will receive a confirmation. <br> Don't forget to check the notifications!
   exam_authorization_request_approved_html: Your request was approved, don't forget to log in at <strong>%{date}</strong> (%{location} time). Good luck!
-  exam_authorization_request_created: Your registration to the exam has been saved!
+  exam_authorization_request_created: You registered for the exam on %{friendly_date}
   exam_authorization_request_rejected: Your request was rejected because you didn't meet the requirements.
-  exam_authorization_request_saved: Your registration to the exam has been updated!
+  exam_authorization_request_saved: You've changed your registration to the exam to %{friendly_date}
   exam_authorization_request_updated: Your registration to %{description} has been updated
   exam_registration_choose_exam: Choose date and time to attend to the exam
   exam_registration_explanation_html: You have until <strong>%{date}</strong> (%{location} time) to register. After that date, your request will be processed and you will receive a confirmation. <br> Don't forget to check the notifications!
