--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -75,16 +75,15 @@ es-CL:
   date: Fecha
   date_and_time: Fecha y hora
   delete_account: Eliminar cuenta
-  delete_account_agree: Entiendo las consecuencias y quiero eliminar mi cuenta
-  delete_account_confirmation_email_explain_html: <p>Te enviamos un correo electrónico a <a href="%{user_email}">%{user_email}</a> para continuar con el proceso de eliminación. </p><p>Si no lo recibiste, por favor escribinos a <a href="%{support_email}">%{support_email}</a>.</p>
+  delete_account_agree: Enviar mail para eliminar cuenta
+  delete_account_confirmation_email_explain_html: <p>Te enviamos un correo electrónico a <strong>%{user_email}</strong> para continuar con el proceso de eliminación. </p><p> Por favor, revisá tu casilla. Si no lo recibiste, escríbenos a <a href="mailto:%{disable_email}">%{disable_email}</a>.</p>
   delete_account_confirmation_request: Para confirmar esta acción, escribí
-  delete_account_confirmation_text: quiero eliminar mi cuenta
-  delete_account_explain: Al eliminar tu cuenta, perderás acceso a todos los contenidos, así como a tu progreso.
-  delete_account_invalid_token: Lo sentimos, el enlace que te trajo hasta aquí ha expirado o es inválido.
-  delete_account_modal_explain_html: Estás a punto de eliminar la cuenta de <strong>%{name}</strong>
-  delete_account_modal_lost_permissions: 'Al hacerlo, perderás el acceso a los siguientes recorridos:'
+  delete_account_explain: Al eliminar tu cuenta se eliminarán también tu progreso y todos tus datos personales.
+  delete_account_invalid_token: Lo sentimos, el enlace que utilizaste ha expirado o es inválido.
+  delete_account_modal_explain_html: Por cuestiones de seguridad, para eliminar tu cuenta te enviaremos un mail a tu casilla <strong>%{user_email}</strong>.
+  delete_account_modal_lost_permissions: 'Al eliminar tu cuenta perderás el acceso a los siguientes cursos:'
   delete_account_mumuki: Eliminar tu cuenta de Mumuki
-  delete_account_try_again_html: Si todavía quieres eliminar tu cuenta, volvé a iniciar el proceso desde <a href="%{profile_url}">tu perfil</a>.
+  delete_account_try_again_html: Si todavía quieres eliminar tu cuenta, vuelve a iniciar el proceso desde <a href="%{profile_url}">tu perfil</a>.
   deleted_by: Eliminado por %{deleter}
   deleted_message_warning: Si infringes reiteradamente estas u otras reglas del Espacio de Consultas, se te puede prohibir el acceso al mismo o podrás sufrir consecuencias más severas, como la expulsión del curso.
   deleted_user: Cuenta Eliminada
@@ -119,6 +118,7 @@ es-CL:
   edit_message: Editar mensaje
   editor_placeholder: "...escribe tu solución acá..."
   email: Email
+  email_sent: Email enviado
   error_description: Esto es lo que se conoce como <span class="error-link">%{error}</span>.
   error_401: error 401
   error_403: error 403
@@ -221,12 +221,12 @@ es-CL:
       exam_authorization_request_rejected: Inscripción rechazada
       exam_registration: Apertura de inscripciones
     subtitle:
-      delete_account: Lamentamos que nos dejes
+      delete_account: Solicitaste eliminar tu cuenta de Mumuki
       exam_authorization_request_approved: Tu solicitud de inscripción al examen fue aprobada.
       exam_authorization_request_rejected: Tu solicitud de inscripción al examen fue rechazada ya que no se cumplieron los requisitos.
       exam_registration: ¡Ya podés inscribirte al examen!
     text:
-      delete_account: ¡Pero no te preocupes! si decidís volver a intentarlo, siempre podés crear una cuenta nueva.
+      delete_account: Una vez que se elimine tu cuenta se eliminarán también tu progreso y todos tus datos personales y no podrás volver a acceder a esta cuenta ni pedir la restitución futura de la información. <br><br> Esta acción es irreversible y permanente. <br><br> ¿Entiendes las consecuencias y aún así quieres eliminar tu cuenta?
       exam_authorization_request_approved: Podrás rendir el examen el día %{exam_start_date} ingresando a la plataforma. ¡Éxitos!
       exam_authorization_request_rejected: ¡No te desanimes! Hiciste un gran esfuerzo y esperamos que continúes aprendiendo programación.
       exam_registration: Tenés tiempo de inscribirte hasta el %{exam_registration_deadline}. Para que tu inscripción sea aceptada debés cumplir con los requisitos.
